2022-09-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/pdf.tmac: Add inclusion guard; if a `pdfmark` macro is
	already defined, skip inclusion of this file.  Unfortunately
	there are multiple name collisions with pdfmark.tmac.

2022-09-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp:
	* src/roff/troff/request.h: Trivially refactor.  Boolify
	`interpolate_macro` and `request::invoke`.  Also rename
	parameter `no_next` to `do_not_want_next_token`, exposing
	potentially confusing interface design.

2022-09-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (spring_trap, interpolate_string)
	(interpolate_string_with_args): Improve error diagnostics: when
	a sprung trap or an interpolation fails because it's being
	attempted on a request, say so explicitly and _name_ it.  If the
	argument to the trap-planting request or to a string
	interpolation escape sequence is itself an interpolation, this
	name might not be obvious.  Consider:
	  .wh \n[pos] \*[mac]
	  .em \*[mac]
	  .itc 1 \*[mac]
	  \*[\*[mac]]
	Supplying this information requires no additional overhead.

2022-09-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (interpolate_string): Trivially
	refactor.  Rename function parameter from `s` to `nm` to more
	obviously align with `interpolate_string_with_args()`.

2022-09-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (do_zero_width, token::description)
	(interpolate_string, interpolate_string_with_args)
	(token::get_char): Revise diagnostic messages to stop presuming
	the identity of the escape character.

2022-09-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (set_escape_char): Recast error
	message to describe attempted operation and tell the user what
	we're doing about being instructed to use an invalid escape
	character.
